namespace_restricted_account.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: dev
