service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-rest
  labels:
     app: simple-rest
     version: v1
spec:
  ports:
  - nodePort: 32080
    port: 8080
    targetPort: 8080
    name: http
  selector:
    app: simple-rest
  type: NodePort
